--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
+    <!-- <script defer src="/js/checklogged.js"></script>
+    <script defer src="/init.js"></script> -->
   </head>
   <body>
     <section class="sub-header">
