--- a/admin/donations.html
+++ b/admin/donations.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css.css" />
   </head>
-  <body>
+  <body onload="checkAuth()">
     <header class="page-header">
       <nav>
         <h1>My dashboard</h1>
@@ -124,34 +124,43 @@
       <section class="search-and-user">
         <div class="admin-profile">
           <span class="greeting">Hello admin</span>
-          <div class="notifications">
-            <span class="badge">1</span>
-            <svg>
-              <use xlink:href="#users"></use>
-            </svg>
-          </div>
+
+          <a type="button" onclick="logout()">Sign out</a>
         </div>
       </section>
       <section class="grid">
         <article>
           <table>
-            <tr>
-              <th>N0</th>
-              <th>Email</th>
-              <th>Adress</th>
-              <th>City</th>
-              <th>state</th>
-              <th>Oncardname</th>
-              <th>Cardnumber</th>
-              <th>Exp_month</th>
-              <th>Exp_year</th>
-              <th>Amount</th>
-            </tr>
-           
+            <thead>
+              <tr>
+                <th>N0</th>
+                <th>Names</th>
+                <th>Email</th>
+                <th>Amount</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody id="table_body"></tbody>
           </table>
+          <h3>Total amount: <i id="total_amount_id"></i></h3>
         </article>
-      
-   
+      </section>
+    </section>
     <script src="js.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/js/donations.js"></script>
+
+    <script>
+      fetchDonations();
+    </script>
+    <script>
+      function checkAuth() {
+        const isauthenticated = window.localStorage.getItem(`access_token`);
+
+        if (!isauthenticated) {
+          window.location.href = "login.html";
+        }
+      }
+    </script>
   </body>
 </html>
