--- a/admin/users.html
+++ b/admin/users.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css.css" />
   </head>
-  <body>
+  <body onload="checkAuth()">
     <header class="page-header">
       <nav>
         <h1>My dashboard</h1>
@@ -123,32 +123,39 @@
     <section class="page-content">
       <section class="search-and-user">
         <div class="admin-profile">
-          <span class="greeting">Hello admin</span>
-          <div class="notifications">
-            <span class="badge">1</span>
-            <svg>
-              <use xlink:href="#users"></use>
-            </svg>
-          </div>
+          <h2 class="greeting">Hello admin</h2>
+          <button href="#" onclick="logout()">Sign out</button>
         </div>
       </section>
       <section class="grid">
         <article>
           <table>
-            <tr>
-              <th>N0</th>
-              <th>Email</th>
-              <th>Phone</th>
-              <th>District</th>
-              <th>Sector</th>
-              <th>Action</th>
-            </tr>
-           
+            <thead>
+              <tr>
+                <th>N0</th>
+                <th>Email</th>
+              </tr>
+            </thead>
+            <tbody id="table_body"></tbody>
           </table>
         </article>
       </section>
-      
     </section>
     <script src="js.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/js/users.js"></script>
+
+    <script>
+      fetchUsers();
+    </script>
+    <script>
+      function checkAuth() {
+        const isauthenticated = window.localStorage.getItem(`access_token`);
+
+        if (!isauthenticated) {
+          window.location.href = "login.html";
+        }
+      }
+    </script>
   </body>
 </html>
