create resources from client side

--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -196,7 +196,7 @@
           subject,
           message,
         };
-        createSuggestion(suggestion);
+        createSuggestion(suggestion, 'guest');
         form.reset();
       });
     </script>
