--- a/frontend/donate.html
+++ b/frontend/donate.html
@@ -219,7 +219,7 @@
               exp_year,
               amount,
             };
-            createDonation(donation);
+            createDonation(donation, 'guest');
             form.reset();
           });
         </script>
