--- a/frontend/report.html
+++ b/frontend/report.html
@@ -224,7 +224,7 @@
           sector,
           cell,
         };
-        createReport(report);
+        createReport(report, 'guest');
         form.reset();
       });
     </script>
