--- a/frontend/report.html
+++ b/frontend/report.html
@@ -143,7 +143,9 @@
        <div class="left box">
          <h2>About us</h2>
          <div class="content">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, enim delectus dolorem blanditiis culpa inventore modi doloribus! Incidunt tempore iusto dolor ut unde corrupti. Fugit ipsum labore repellendus expedita eveniet.</p>
+            <p>We are startup youth iniative based in Kigali aimed at helping combating domestic violance in Rwanda as else where in the world. 
+              we are a non-profit organisation under private sector federation.You can reach to us any where any time,Use our media links and contact info to reach to us for more information.
+              .</p>
             <div class="social">
               <a href="#"><span class="fa fa-facebook"></span></a>
               <a href="#"><span class="fa fa-twitter"></span></a>
