changes for pitch

--- a/frontend/admin/donations.html
+++ b/frontend/admin/donations.html
@@ -24,7 +24,7 @@
             <h3>Admin</h3>
           </li>
           <li>
-            <a href="/dashboard.html">
+            <a href="../dashboard.html">
               <svg>
                 <use xlink:href="#pages"></use>
               </svg>
@@ -61,6 +61,15 @@
                 <use xlink:href="#comments"></use>
               </svg>
               <span>Users</span>
+            </a>
+          </li>
+          <li>
+            
+            <a href="sms.html">
+              <svg>
+                <use xlink:href="#users"></use>
+              </svg>
+              <span>SMS</span>
             </a>
           </li>
           <!--<li>
@@ -146,9 +155,9 @@
         </article>
       </section>
     </section>
-    <script src="js.js"></script>
+    <script src="./js.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="/js/donations.js"></script>
+    <script src="../js/donations.js"></script>
 
     <script>
       fetchDonations();
@@ -158,7 +167,7 @@
         const isauthenticated = window.localStorage.getItem(`access_token`);
 
         if (!isauthenticated) {
-          window.location.href = "login.html";
+          window.location.href = "/frontend/login.html";
         }
       }
     </script>
