--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -211,7 +211,7 @@ we are a non-profit organisation under private sector federation.You can reach t
 
         const subject = document.querySelector("#subject").value;
 
-        const message = document.querySelector("#subject").value;
+        const message = document.querySelector("#message").value;
 
 
         const suggestion= {
