--- a/frontend/home.html
+++ b/frontend/home.html
@@ -33,10 +33,10 @@
             <i class="fa fa-bars"onclick="showMenu" ></i>
         </nav>
        <div class="text-box"> 
-           <h1>Domestic Violence Report. </h1>
+           <h1>Family Hope Youth Initiative. </h1>
            <p>
             Answers to frequently asked questions about domestic violence.
-             Learn about what constitutes domestic violence, legal<br> remedies to abuse, child neglect law, and where to turn if you are experiencing domestic violence.
+             Learn about what constitutes domestic violence, legal<br> remedies to abuse and where to turn if you are experiencing domestic violence.
            </p>
            <a href="index.html" class="hero-btn">Visit Us To know More</a>
        </div>
@@ -45,28 +45,19 @@
 
 <section class="services">
 <h1>Services We Offer </h1>
-<p> Domestic violence involves patterns of coercively controlling behaviors designed to assert influence and control over an individual’s life using threats of harm, dependence, isolation, intimidation, and/or violence. In other words,domestic violence entails more than single incidents of physical violence.</p>
+<p> Domestic violence involves patterns of coercively controlling behaviors designed to assert influence and control over an individual’s life using threats of harm, dependence, isolation, intimidation, and/or violence. Family hope youth Initiative offers service that are limited to awareness throught education and support by advocacy,Report cases as well as conflictict resolution and teaching.</p>
 
 <div class="row">
   <div class="service-col">
-    <h3>Report and Advocacy</h3>
-    <p>Advocacy is an activity by an individual or group that aims to influence
-      decisions within political, economic, and social institutions. 
-      Advocacy includes activities and publications to influence public policy, laws and budgets by using facts.</p>
+    <h3>Domestic violence Education & awareness</h3>
+    <p> Domestic violence education tackling the information that people need to know about domestic violance and legal remedies that apply.One of the reasons why cases reported get fewer and fewer is the level of domestic violance people have today</p>
   </div>
   <div class="service-col">
-    <h3>Aid and Support</h3>
-    <p>Advocacy is an activity by an individual or group that aims to influence
-      decisions within political, economic, and social institutions. 
-      Advocacy includes activities and publications to influence public policy, laws and budgets by using facts.</p>
+    <h3>Training & Outreach</h3>
+    <p>We gather Funds and support from individuals and charity organisaion to help the victims of domestic as well as intimate partner violance.</br>
+      we believe that being needy doesn't mean being weak, victms  will have access to claim support.</p>
   </div>
-  <div class="service-col">
-    <h3> Conflict Resolution and Teaching </h3>
-    <p>Advocacy is an activity by an individual or group that aims to influence
-      decisions within political, economic, and social institutions. 
-      Advocacy includes activities and publications to influence public policy, laws and budgets by using facts.</p>
   </div>
-</div>
 
 </section>
 <!--upcoming -->
@@ -85,16 +76,12 @@
   <div class="upcoming-col">
     <img src="images/gbvwomen.jpg" alt="">
     <h3>Gender Based Violance</h3>
-    <p>The neglection  of Children's rights by their parents are one of the main issue 
-      that is affecting many childrens to day .Here we are going elaborate more and ephasise 
-      on law concerning child neglect.</p>
+    <p>Domestic Violence is the most common type of gender-based violence. In most contexts, domestic violence is used to describe intimate partner violence (IPV): violence that occurs between two individuals in an intimate (sexual and/or romantic) relationship. This can encompass sexual, physical, emotional and psychological violence.</p>
   </div>
   <div class="upcoming-col">
     <img src="images/drugabuse.jpg" alt="">
     <h3>Drug Abuse</h3>
-    <p>The neglection  of Children's rights by their parents are one of the main issue 
-      that is affecting many childrens to day .Here we are going elaborate more and ephasise 
-      on law concerning child neglect.</p>
+    <p>Drug abuse or substance abuse refers to the use of certain chemicals for the purpose of creating pleasurable effects on the brain. There are over 190 million drug users around the world and the problem has been increasing at alarming rates, especially among young adults under the age of 30.</p>
   </div>
 </div>
 
@@ -111,8 +98,7 @@
     <img src="images/lady.jpg" alt="">
     <div>
       <p>The neglection  of Children's rights by their parents are one of the main issue 
-        that is affecting many childrens to day .Here we are going elaborate more and ephasise 
-        on law concerning child neglect</p>
+        that is affecting many childrens to day,Physical neglect is by far the most common type of neglect. In most cases, the parent or caregiver is not providing the child with all of the basic necessities like food, clothing and shelter. In some cases, young children are left without proper supervision for extended periods of time</p>
         <h3>Mrs Abatesi Alpha</h3>
         <i class="fa fa-star" ></i>
         <i class="fa fa-star" ></i>
@@ -125,9 +111,10 @@
   <div class="testimonials-col">
     <img src="images/gentle.png" alt="">
     <div>
-      <p>The neglection  of Children's rights by their parents are one of the main issue 
-        that is affecting many childrens to day .Here we are going elaborate more and ephasise 
-        on law concerning child neglect</p>
+      <p>
+        The most common question survivors get asked and the one behind which immense pain is hidden. Leaving an abusive relationship isn’t as simple as walking away. There are many things a victim has to consider before taking this step such as their children, finances, housing and more. Leaving an abusive relationship is the most dangerous time for a victim.
+        
+        </p>
         <h3>Mr Sunday Emmy</h3>
         <i class="fa fa-star" ></i>
         <i class="fa fa-star" ></i>
