--- a/frontend/home.html
+++ b/frontend/home.html
@@ -53,9 +53,10 @@
     <p> Domestic violence education tackling the information that people need to know about domestic violance and legal remedies that apply.One of the reasons why cases reported get fewer and fewer is the level of domestic violance people have today</p>
   </div>
   <div class="service-col">
-    <h3>Training & Outreach</h3>
-    <p>We gather Funds and support from individuals and charity organisaion to help the victims of domestic as well as intimate partner violance.</br>
-      we believe that being needy doesn't mean being weak, victms  will have access to claim support.</p>
+    <h3>Report & advocacy</h3>
+    <p>We are startup youth iniative based in Kigali aimed at helping combating domestic violance in Rwanda as else where in the world. 
+      we are a non-profit organisation under private federation, on Report and Advocy our clients report cases for support in case related to 
+      Domestic violance and we find quick support from RIB and Isange one stop center as we push harder  for quick fix..</p>
   </div>
   </div>
 
