--- a/frontend/index.html
+++ b/frontend/index.html
@@ -144,14 +144,17 @@
               <div class="card__body">
                 <span class="tag tag-red">New</span>
                 <h4>
-                  <a href="articles/fightingagainstviolance.html"
-                    >Effects of domestic violence on children</a
+                  <a href="#"
+                    >Fighting against violence Gasabo</a
                   >
                 </h4>
                 <p>
-                  <iframe width="420" height="315"
-                  src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                  </iframe>
+        
+                  <video width="320" height="240" controls>
+                    <source src="images/ihohoterwa.mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                  Your browser does not support the video tag.
+                  </video>
                 </p>
               </div>
               <div class="card__footer">
